[package]
name = "csv_test"
version = "0.1.0"
authors = ["Sam Miller <sm1215@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde_bytes = "0.11"
serde = { version = "1", features = ["derive"] }